Kludgy fix for SASS whitespace bug (issue #104)

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,7 +33,7 @@ body.sticky-bottom-footer {
 
   .carousel, .uw-hero {
     margin: 0 -50px;
-    max-width: calc(100% + 100px);
+    max-width: calc(unquote("100% + 100px"));
   }
 }
 
@@ -54,7 +54,7 @@ body.sticky-bottom-footer {
 
     .carousel, .uw-hero {
       margin: 0 -20px;
-      max-width: calc(100% + 40px);
+      max-width: calc(unquote("100% + 40px"));
     }
   }
 }
